--- a/col1.html
+++ b/col1.html
@@ -33,7 +33,7 @@
 
             <div class="main-container">
                 <div class="about-wrapper">
-                    <img id="project_img" src="Images/Portfolio5.jpg">
+                    <img id="project_img" src="Portfolio5.jpg">
                     <p>In depth description of design and process...</p>
                 </div>  
                 
