--- a/col3.html
+++ b/col3.html
@@ -32,7 +32,7 @@
 
             <div class="main-container">
                 <div class="about-wrapper">
-                    <img id="project_img" src="Images/Portfolio4.jpg">
+                    <img id="project_img" src="Portfolio4.jpg">
                     <p>In depth description of design and process...</p>
                 </div>  
                 
