--- a/col2.html
+++ b/col2.html
@@ -44,7 +44,7 @@
             <div class="main-container">
                 <h3 style="text-align: center;">Get in touch about my designs</h3>
     
-                <form action="mailto:fortminor50@gmail.com" method="post" id="contact-form">
+                <form action="mailto:amelia.birch@hotmail.co.uk" method="get" id="contact-form">
                     <label>Name</label>
                     <input class="input-field" type="text" name="name">
     
